# OpenGL-Principal-Standard-Shader

./: .gitignore  CMakeLists.txt  Principal_Shader_Open_GL.sln  README.md
Principal_Shader_Open_GL/: Principal_Shader_Open_GL.vcxproj  Principal_Shader_Open_GL.vcxproj.filters  basic.vert  main.cpp  mesh_utils.cpp  mesh_utils.h  shader_utils.cpp  texture_utils.cpp  texture_utils.h  uniforms.cpp  uniforms.h
Principal_Shader_Open_GL/shaders/: basic.frag  basic.vert  equirect_to_cubemap.frag
Principal_Shader_Open_GL/textures/basket/: Poliigon_RattanWeave_6945.mtlx
